#278 - lost in translation...

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -764,11 +764,17 @@ preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior=Exit behavior
 preferences.dialog.general.title=General
 preferences.dialog.ip_lan_list=LAN IP List
+preferences.dialog.lan_line_settings=LAN speed
 preferences.dialog.language=Language
 preferences.dialog.line_settings=Internet speed
 preferences.dialog.network.title=Network
-preferences.dialog.networkmode.serveronly.tooltip=Restricts connections to the server only. This actually disables any peer-to-peer traffic and keeps the connection to the set Online Storage server only.
-preferences.dialog.networkmode.serveronly=Server only
+preferences.dialog.network_mode.lan_only.tool_tip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
+preferences.dialog.network_mode.lan_only=LAN only
+preferences.dialog.network_mode.name=Connect to
+preferences.dialog.network_mode.private.tool_tip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
+preferences.dialog.network_mode.private=LAN and Internet
+preferences.dialog.network_mode.server_only.tool_tip=Restricts connections to the server only. This actually disables any peer-to-peer traffic and keeps the connection to the set Online Storage server only.
+preferences.dialog.network_mode.server_only=Server only
 preferences.dialog.nickname=Nickname
 preferences.dialog.non_windows_info=Note\: Some settings are only available on Windows systems
 preferences.dialog.open_port.tooltip=Opens the PowerFolder port on the Windows Firewall
@@ -791,6 +797,8 @@ preferences.dialog.show_chat_notifications=Show chat notifications when minimize
 preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
 preferences.dialog.show_preview_panel=Enable internal image preview
 preferences.dialog.show_system_notifications=Show system notifications when minimized
+preferences.dialog.silent_throttle.tool_tip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
+preferences.dialog.silent_throttle=Silent mode bandwidth throttle
 preferences.dialog.small_toolbar=Use small toolbar icons
 preferences.dialog.startPanel.downloads=Downloads
 preferences.dialog.startPanel.myFolders=My PowerFolders
