--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -123,6 +123,86 @@ transfer_mode.host_files.name=Share/Send
 transfer_mode.manual_synchronization.name=Manual synchronization
 transfer_mode.no_sync.name=No synchronization
 
+####################
+# Pro Translations #
+####################
+
+pro.download_csv.description=Downloads the list of accounts as CSV
+pro.download_csv.key=D
+pro.download_csv.name=Download as CSV
+pro.http.options.directconnect=Direct connection to the Internet
+pro.http.options.host=Hostname
+pro.http.options.httpproxy=HTTP-Proxy
+pro.http.options.password=Password
+pro.http.options.port=Port
+pro.http.options.title=HTTP Connection settings
+pro.http.options.username=Username
+pro.http.options.withauth=With authorization
+pro.process_order.description=
+pro.process_order.key=O
+pro.process_order.name=Process order
+pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
+pro.security.high=High
+pro.security.high_info=High security (default)\:
+pro.security.inet_encryption_preferred=Internet\: Encrypted connections are not required.
+pro.security.inet_encryption_required=Internet\: Only encrypted connections are accepted.
+pro.security.keymismatch=The public key of {0} mismatches the internal keystore.\nDo you want to accept his new key now?
+pro.security.lan_encryption_preferred=LAN\:      Encrypted connections are not required.
+pro.security.lan_encryption_required=LAN\:      Only encrypted connections are accepted.
+pro.security.low=Low
+pro.security.low_info=Low security\:
+pro.security.maximum=Maximum
+pro.security.maximum_info=Maximum security\:
+pro.security.newkey=New Key detected
+pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
+pro.security.possiblebreach=Possible security breach
+pro.security.secure=secure
+pro.security.securitysettings=Security Settings
+pro.wizard.activation.activating=Activating PowerFolder Pro
+pro.wizard.activation.agree_gtcs=I agree to the General Terms and Conditions
+pro.wizard.activation.already_account=I'm already registerd
+pro.wizard.activation.choose_key_file=Choose License key file
+pro.wizard.activation.computers_allowed=Computers allowed\:
+pro.wizard.activation.computers_found=Computers found\:
+pro.wizard.activation.confirm_key=Please confirm the following activation data.
+pro.wizard.activation.contact_support=Contact the PowerFolder support
+pro.wizard.activation.error_invalid_key=Invalid license key
+pro.wizard.activation.error_reading_file=Error while reading license key file
+pro.wizard.activation.error_unable_to_read=Unable to read
+pro.wizard.activation.file_activation=File Activation
+pro.wizard.activation.key_abuse=License key abuse detected.
+pro.wizard.activation.key_expired=Your license key has expired\!
+pro.wizard.activation.key_file=License key file
+pro.wizard.activation.key_valid_till=Key valid till\:
+pro.wizard.activation.license_key=License Key
+pro.wizard.activation.multiple_key_select=Login successful. Please select the license key to use.
+pro.wizard.activation.no_key_available=No valid license key available
+pro.wizard.activation.number_of_computers=Allowed computers
+pro.wizard.activation.one_key_available=Login successful. Got one license key.
+pro.wizard.activation.online_activation=Online Activation
+pro.wizard.activation.order_additional=Click here to order additional licenses
+pro.wizard.activation.order_now=Click here to order PowerFolder Pro
+pro.wizard.activation.password_confirm=Confirm password
+pro.wizard.activation.password_length=Password needs to be at least 6 characters long
+pro.wizard.activation.please_purchase=Please purchase PowerFolder Pro to re-activate.
+pro.wizard.activation.pro_activation=PowerFolder Pro Activation
+pro.wizard.activation.recover_password=Recover password
+pro.wizard.activation.register_now=Where can I register?
+pro.wizard.activation.register_now_trial_1=Free\: Register now for your 30-days trial of
+pro.wizard.activation.register_now_trial_2=PowerFolder Pro.
+pro.wizard.activation.register_why=Why do I need to register?
+pro.wizard.activation.subscribe_newsletter=Subscribe to newsletter
+pro.wizard.activation.successful=Activation successful
+pro.wizard.activation.thanks_activation=Thank you for activating PowerFolder Pro.
+pro.wizard.activation.thanks_additional=Thank you for purchasing additional\nPowerFolder Pro licenses.
+pro.wizard.activation.thanks_purchase=Thank you for purchasing PowerFolder Pro.
+pro.wizard.activation.try_again=Try again
+pro.wizard.activation.unable_to_login=Unable to login. Email or password wrong?
+pro.wizard.activation.update_service_account=Update Service Account
+pro.wizard.activation.update_service_info=Automatically get the latest features and bugfixes.
+pro.wizard.activation.valid_from=Valid from
+pro.wizard.activation.valid_to=Valid to
+
 ###################
 # Everything Else #
 ###################
@@ -826,9 +906,6 @@ preferences.dialog.warnningMessage=Warning
 
 preview_folder_remove.dialog.text=Remove PowerFolder {0}?
 preview_folder_remove.dialog.title=Remove PowerFolder {0}?
-
-pro.security.secure=secure
-pro.wizard.activation.register_now=Where can I register?
 
 public_folders.filter.show_empty_folders=Show empty folders
 
