#278 - directory filter stats.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,7 +19,6 @@
 # http://www.powerfolder.com
 #
 
-
 ###########
 # Actions #
 ###########
@@ -442,6 +441,11 @@ filename_problem.reserved_filename.description=The filename is a reserved filena
 filename_problem.reserved_filename=The filename is a reserved filename on Windows
 filename_problem.to_long.description=The filename is longer than 255 characters,\nthis in know to cause problems on Windows, Mac OSX and Unix/Linux computers
 filename_problem.to_long=The filename is to long
+
+files_stats_panel.local_label=Local: {0}
+files_stats_panel.incoming_label=Incoming: {0}
+files_stats_panel.deleted_label=Deleted: {0}
+files_stats_panel.recycled_label=Recycled: {0}
 
 files_tab.combo.deleted_and_previous_files=Deleted and recycled files
 files_tab.combo.incoming_files_only=Incoming files only
