--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -452,6 +452,7 @@ files_tab.combo.incoming_files_only=Incoming files only
 files_tab.combo.local_and_incoming=Local and incoming files
 files_tab.combo.local_files_only=Local files only
 files_tab.combo.new_files_only=New files only
+files_tab.combo.tool_tip=Select files to display
 files_tab.deleted=Deleted\: {0}
 files_tab.filter_by_file_name.hint=Filter by file name
 files_tab.filter_by_file_name.tool_tip=Filter results by file name
