#278 - file table headers

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -412,6 +412,12 @@ fileinfo.status=Status
 fileinfo.uploading=Uploading
 fileinfo.version=Version
 
+files_table_model.name=Name
+files_table_model.size=Size
+files_table_model.modified_by=Modified by
+files_table_model.date=Date
+files_table_model.availability=Availability
+
 filelist.availability=Availability
 filelist.date=Date
 filelist.modified_by=Modified by
@@ -934,7 +940,6 @@ remove_pattern.title=Remove ignore pattern
 restore.busy.description=Moving files from the PowerFolder recycle bin to your folder
 restore.busy.title=Restoring file(s)
 
-root_panel.connected_users=Connected Users
 root_panel.friends=Friends
 
 scan_all_folders.description=Synchronizes all folders now (F5)
