--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -255,7 +255,7 @@ chat_panel.member_connected_at_time={0} connected at {1}
 chat_panel.member_disconnected_at_time={0} disconnected at {1}
 chat_panel.member_joined_folder_at_time={0} joined folder at {1}
 chat_panel.member_left_folder_at_time={0} left folder at {1}
-
+chat_panel.cannot_deliver=Message can not be delivered because '{0}' is not connected
 choose_disk_location_panel.dir.title=Target directory
 choose_disk_location_panel.dir_no_exist.text=The specified target directory {0} does not exist.\nWould you like to locate this folder in the following directory?\n{1}
 choose_disk_location_panel.dir_no_write.text=The specified target directory {0} is not writable.\nWould you like to locate this folder in the following directory?\n{1}
