#278 - node to node chatting done

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -250,6 +250,7 @@ chat.notification.message=You have received a chat message.
 chat.notification.title=Chat Message Received
 
 chat_frame.title=Chat
+chat_frame.tool_tip=Chat with {0}
 
 chat_panel.member_connected_at_time={0} connected at {1}
 chat_panel.member_disconnected_at_time={0} disconnected at {1}
