#278 - chat tab close button

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -257,6 +257,8 @@ chat_panel.member_disconnected_at_time={0} disconnected at {1}
 chat_panel.member_joined_folder_at_time={0} joined folder at {1}
 chat_panel.member_left_folder_at_time={0} left folder at {1}
 chat_panel.cannot_deliver=Message can not be delivered because '{0}' is not connected
+chat_panel.close_button.tool_tip=Close chat session with {0}
+
 choose_disk_location_panel.dir.title=Target directory
 choose_disk_location_panel.dir_no_exist.text=The specified target directory {0} does not exist.\nWould you like to locate this folder in the following directory?\n{1}
 choose_disk_location_panel.dir_no_write.text=The specified target directory {0} is not writable.\nWould you like to locate this folder in the following directory?\n{1}
