#278 - chat panel buttons

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -254,8 +254,8 @@ chat_frame.tool_tip=Chat with {0}
 
 chat_panel.member_connected_at_time={0} connected at {1}
 chat_panel.member_disconnected_at_time={0} disconnected at {1}
-chat_panel.member_joined_folder_at_time={0} joined folder at {1}
-chat_panel.member_left_folder_at_time={0} left folder at {1}
+chat_panel.member_joined_folder_at_time={0} joined folder {1} at {2}
+chat_panel.member_left_folder_at_time={0} left folder {1} at {2}
 chat_panel.cannot_deliver=Message can not be delivered because '{0}' is not connected
 chat_panel.close_button.tool_tip=Close chat session with {0}
 
