--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -15,7 +15,7 @@
 # translation@powerfolder.com
 #
 # Thank you,
-# Your PowerFolder Team
+# The PowerFolder Team
 # http://www.powerfolder.com
 #
 
@@ -37,7 +37,7 @@ action_create_transfer_mode.name=Create
 
 action_add_friend.description=Adds computer to friend list
 action_add_friend.key=F
-action_add_friend.name=Add to Friends
+action_add_friend.name=Add
 
 action_details.description=Displays the details panel
 action_details.key=D
@@ -57,7 +57,7 @@ action_remove_ignore.name=Remove
 
 action_remove_friend.description=Removes computer from friend list
 action_remove_friend.key=R
-action_remove_friend.name=Remove from Friends
+action_remove_friend.name=Remove
 
 action_connect.description=Manually connects to a PowerFolder computer
 action_connect.key=C
@@ -533,7 +533,6 @@ folder_member_table_model.name=Name
 folder_member_table_model.sync_status=Sync status
 
 folder_panel.chat.key=C
-folder_panel.chattab.title=Chat
 
 folder_panel.files.key=F
 folder_panel.files_tab.dropfile_duplicate_dialog.skipall=Skip All Duplicates
