#278 - uploads and downloads links

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -71,9 +71,17 @@ action_open_chat.description=Opens a chat session with this computer
 action_open_chat.key=C
 action_open_chat.name=Chat
 
+action_open_downloads_information.description=Shows details of recent file downloads
+action_open_downloads_information.key=D
+action_open_downloads_information.name=Downloads
+
 action_open_preferences.key=P
 action_open_preferences.name=Preferences
 action_open_preferences.description=Opens the preferences dialog
+
+action_open_uploads_information.description=Shows details of recent file uploads
+action_open_uploads_information.key=U
+action_open_uploads_information.name=Uploads
 
 action_new_folder.description=Create a new folder
 action_new_folder.key=N
