--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -35,11 +35,11 @@ action_create_transfer_mode.description=Create a custom transfer mode
 action_create_transfer_mode.key=C
 action_create_transfer_mode.name=Create
 
-action_add_friend.description=Adds computer to friend list
+action_add_friend.description=Add computer to friend list
 action_add_friend.key=F
 action_add_friend.name=Add
 
-action_details.description=Displays the details panel
+action_details.description=Display the details panel
 action_details.key=D
 action_details.name=Details
 
@@ -55,31 +55,31 @@ action_remove_ignore.description=Remove a pattern from the ignore list
 action_remove_ignore.key=R
 action_remove_ignore.name=Remove
 
-action_remove_friend.description=Removes computer from friend list
+action_remove_friend.description=Remove computer from friend list
 action_remove_friend.key=R
 action_remove_friend.name=Remove
 
-action_connect.description=Manually connects to a PowerFolder computer
+action_connect.description=Manually connect to a PowerFolder computer
 action_connect.key=C
 action_connect.name=Connect
 
-action_open_about_box.description=Shows information about PowerFolder
+action_open_about_box.description=Show information about PowerFolder
 action_open_about_box.key=A
 action_open_about_box.name=About
 
-action_open_chat.description=Opens a chat session with this computer
+action_open_chat.description=Open a chat session with this computer
 action_open_chat.key=C
 action_open_chat.name=Chat
 
-action_open_downloads_information.description=Shows details of recent file downloads
+action_open_downloads_information.description=Show details of recent file downloads
 action_open_downloads_information.key=D
 action_open_downloads_information.name=Downloads
 
 action_open_preferences.key=P
 action_open_preferences.name=Preferences
-action_open_preferences.description=Opens the preferences dialog
+action_open_preferences.description=Open the preferences dialog
 
-action_open_uploads_information.description=Shows details of recent file uploads
+action_open_uploads_information.description=Show details of recent file uploads
 action_open_uploads_information.key=U
 action_open_uploads_information.name=Uploads
 
@@ -111,7 +111,7 @@ action_open_members_information.description=Open members information for this fo
 action_open_members_information.key=M
 action_open_members_information.name=Members
 
-action_reconnect.description=Reconnects to this computer now
+action_reconnect.description=Reconnect to this computer now
 action_reconnect.key=R
 action_reconnect.name=Reconnect
 
