#278 - basic uploads and downloads info panels

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -357,6 +357,8 @@ dialog.update_check.title=Newer version available
 dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
 dialog.user_select.title=Select Users
 
+downloads_information_card.title=Downloads
+
 empty_recycle_bin.working.description=Deleting files
 empty_recycle_bin.working.title=Emptying the Recycle Bin
 empty_recycle_bin_confimation.dont=Do Not Empty
@@ -1039,6 +1041,8 @@ transfers.requested=Requested
 transfers.searching=Searching...
 transfers.to=To
 transfers.verifying=Finalizing
+
+uploads_information_card.title=Uploads
 
 user.dir.contacts=Contacts
 user.dir.custom=Custom
