#278 - uploads and downloads auto cleanup

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -358,6 +358,8 @@ dialog.user_select.text=Select users to invite. Hold down Ctrl key to select mul
 dialog.user_select.title=Select Users
 
 downloads_information_card.title=Downloads
+downloads_information_card.auto_cleanup.name=Auto-cleanup
+downloads_information_card.auto_cleanup.description=Clean up any downloads when they complete
 
 empty_recycle_bin.working.description=Deleting files
 empty_recycle_bin.working.title=Emptying the Recycle Bin
@@ -1043,6 +1045,8 @@ transfers.to=To
 transfers.verifying=Finalizing
 
 uploads_information_card.title=Uploads
+uploads_information_card.auto_cleanup.name=Auto-cleanup
+uploads_information_card.auto_cleanup.description=Clean up any uploads when they complete
 
 user.dir.contacts=Contacts
 user.dir.custom=Custom
