#278 - uploads and downloads clean up buttons

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -19,5 +19,7 @@ action_edit_transfer_mode.icon=icons/Edit.png
 action_delete_transfer_mode.icon=icons/Minus.png
 action_create_transfer_mode.icon=icons/Plus.png
 action_details.icon=icons/Details.gif
+action_clear_completed_uploads.icon=icons/Clear.gif
+action_clear_completed_downloads.icon=icons/Clear.gif
 
 
