--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -23,6 +23,10 @@
 # Actions #
 ###########
 
+action_add_friend.description=Add computer to friend list
+action_add_friend.key=F
+action_add_friend.name=Add
+
 action_edit_transfer_mode.description=Edit this transfer mode
 action_edit_transfer_mode.key=E
 action_edit_transfer_mode.name=Edit
@@ -31,13 +35,17 @@ action_delete_transfer_mode.description=Delete this transfer mode
 action_delete_transfer_mode.key=D
 action_delete_transfer_mode.name=Delete
 
+action_clear_completed_uploads.description=Clears the list of the recently completed uploads (Alt-3)
+action_clear_completed_uploads.key=C
+action_clear_completed_uploads.name=Cleanup
+
+action_clear_completed_downloads.description=Clears the list of the recently completed downloads (Alt-3)
+action_clear_completed_downloads.key=C
+action_clear_completed_downloads.name=Cleanup
+
 action_create_transfer_mode.description=Create a custom transfer mode
 action_create_transfer_mode.key=C
 action_create_transfer_mode.name=Create
-
-action_add_friend.description=Add computer to friend list
-action_add_friend.key=F
-action_add_friend.name=Add
 
 action_details.description=Display the details panel
 action_details.key=D
