#278 - downloads panel - not linked yet

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -35,11 +35,11 @@ action_delete_transfer_mode.description=Delete this transfer mode
 action_delete_transfer_mode.key=D
 action_delete_transfer_mode.name=Delete
 
-action_clear_completed_uploads.description=Clears the list of the recently completed uploads (Alt-3)
+action_clear_completed_uploads.description=Clear the list of the recently completed uploads (Alt-3)
 action_clear_completed_uploads.key=C
 action_clear_completed_uploads.name=Cleanup
 
-action_clear_completed_downloads.description=Clears the list of the recently completed downloads (Alt-3)
+action_clear_completed_downloads.description=Clear the list of the recently completed downloads (Alt-3)
 action_clear_completed_downloads.key=C
 action_clear_completed_downloads.name=Cleanup
 
@@ -414,26 +414,31 @@ file_filter_panel.new_files_only=New files only
 
 file_info.recently_downloaded=Recently downloaded
 
-fileinfo.availability=Availability
-fileinfo.available=Available
+file_details_panel.availability=Availability
+file_details_panel.available=Available
+file_details_panel.downloading=Downloading
+file_details_panel.location=Location
+file_details_panel.modified_by=Modified by
+file_details_panel.newer_available=Newer version available
+file_details_panel.normal=Local available
+file_details_panel.not_available=Not available
+file_details_panel.status=Status
+file_details_panel.uploading=Uploading
+file_details_panel.version=Version
+file_details_panel.deleted=Deleted
+file_details_panel.expected=Expected
+file_details_panel.name=Name
+file_details_panel.modified_date=Modified on
+
 fileinfo.deleted=Deleted
-fileinfo.downloading=Downloading
 fileinfo.downloading_from_member=Downloading from {0}
 fileinfo.expected=Expected
 fileinfo.ignore=This file is excluded from synchronization
 fileinfo.in_recycle_bin=In Recycle Bin
-fileinfo.location=Location
-fileinfo.modified_by=Modified by
 fileinfo.modified_date=Modified on
 fileinfo.name=Name
 fileinfo.new_version_availeble=New version of file available
-fileinfo.newer_available=Newer version available
-fileinfo.normal=Local available
-fileinfo.not_available=Not available
 fileinfo.remote_deleted=Newer version deleted by other user
-fileinfo.status=Status
-fileinfo.uploading=Uploading
-fileinfo.version=Version
 
 files_table_model.name=Name
 files_table_model.size=Size
