--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1146,6 +1146,7 @@ wizard.success_join=You have successfully joined the folder\!
 wizard.sync_pcs_panel.folder_sync_success=You successfully set up a folder mirror\!\n
 wizard.sync_pcs_panel.pcs_join=Other computers can join this folder now
 wizard.sync_pcs_panel.select=Please select the directory which should be synchronized
+wizard.webservice.enter_account=Please enter your account details to login to Online Storage
 wizard.webservice.learn_more=What is PowerFolder Online Storage?
 wizard.webservice.login=Online Storage Login
 wizard.webservice.mirror_choose_folder=Choose a folder to be backed up by PowerFolder Online Storage
