#278 - Link folder sync button

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -115,6 +115,10 @@ action_open_files_information.description=Open files information for this folder
 action_open_files_information.key=S
 action_open_files_information.name=Files
 
+action_sync_folder.description=Synchronize this folder now
+action_sync_folder.key=S
+action_sync_folder.name=Synchronize
+
 action_open_members_information.description=Open members information for this folder
 action_open_members_information.key=M
 action_open_members_information.name=Members
