#278 - Fix node manager model to provide true filtered list of nodes.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -283,10 +283,10 @@ choose_disk_location_panel.dir.title=Target directory
 choose_disk_location_panel.dir_no_exist.text=The specified target directory {0} does not exist.\nWould you like to locate this folder in the following directory?\n{1}
 choose_disk_location_panel.dir_no_write.text=The specified target directory {0} is not writable.\nWould you like to locate this folder in the following directory?\n{1}
 
-computers_tab.all_computers=All computers
-computers_tab.all_online=All online computers
 computers_tab.computer_type_list.text=Select computer types to display
-computers_tab.only_online_friends=Friends only
+computers_tab.all_friends_online_lan=All friends / online LAN
+computers_tab.online_friends=Online friends
+computers_tab.online_friends_online_lan=Online friends / online LAN
 
 connect.dialog.text=Please enter the hostname or ip of the computer you want to connect.\n\nPowerFolder automatically connects to the network after a short time;\nuse this option if you want to manually connect to a computer.\n
 connect.dialog.title=Manually connect to a PowerFolder computer
