--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -22,5 +22,6 @@ action_create_transfer_mode.icon=icons/Plus.png
 action_details.icon=icons/Details.gif
 action_clear_completed_uploads.icon=icons/Clear.gif
 action_clear_completed_downloads.icon=icons/Clear.gif
+action_invite_friend.icon=icons/Invite.gif
 
 
