--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -103,6 +103,10 @@ action_hide_offline.description=Offline computers will be filtered from this sea
 action_hide_offline.key=H
 action_hide_offline.name=Hide offline computers
 
+action_invite_friend.description=Invite a friend to join this folder
+action_invite_friend.key=I
+action_invite_friend.name=Invite
+
 action_search_computer.description=Search for a computer
 action_search_computer.key=S
 action_search_computer.name=Search
