refs #1321 Generic setup of HTTP proxy

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -23,6 +23,8 @@
 # Actions #
 ###########
 
+general.proxy_settings=Proxy settings
+
 action_add_friend.description=Add computer to friend list
 action_add_friend.key=F
 action_add_friend.name=Add
