refs #1314 Server setup

--- a/src/test-resources/ControllerMarge.config
+++ b/src/test-resources/ControllerMarge.config
@@ -3,6 +3,7 @@
 nodeid=randomstringMarge
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
+net.openport=false
 nick=Marge
 random-port=false
 port=8453
@@ -12,4 +13,5 @@ uploadlimit=0
 disablercon=true
 disablebroadcasts=true
 networkingmode=LANONLYMODE
+mydyndns=localhost
 auto.connect=false
