--- a/src/test-resources/ControllerBart.config
+++ b/src/test-resources/ControllerBart.config
@@ -3,6 +3,7 @@
 nodeid=randomstringBart_relay
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
+net.openport=false
 nick=Bart
 random-port=false
 port=3457
