--- a/src/test-resources/ControllerMaggie.config
+++ b/src/test-resources/ControllerMaggie.config
@@ -3,6 +3,7 @@
 nodeid=randomstringMaggie
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
+net.openport=false
 nick=Maggie
 random-port=false
 port=34661
