--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -349,6 +349,7 @@ dialog.create_edit_profile.weekdays=Weekdays
 dialog.create_edit_profile.weekends=Weekends
 dialog.delete_profile.title=Delete custom transfer mode
 dialog.fatal_error.title=Fatal Error
+dialog.node_select.hide_offline.name=Hide offline
 dialog.synchronization.choose=Please choose your synchronization action
 dialog.synchronization.duplicate.delete=Deleting this transfer mode will affect all these folders.
 dialog.synchronization.duplicate.edit=Editing this transfer mode will affect all these folders.
@@ -644,6 +645,7 @@ home_tab.files_downloaded=File(s) downloaded
 home_tab.files_uploaded=File(s) uploaded
 home_tab.folders=Folder(s)
 home_tab.in_sync=All folders are synchronized.
+home_tab.new_invitations=New invitation(s)
 home_tab.no_computers=No other computers known
 home_tab.no_folders=No folder setup
 home_tab.online_storage.account=Account: {0}
