#278 - Handel received invites with wizard.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -77,6 +77,10 @@ action_open_about_box.description=Show information about PowerFolder
 action_open_about_box.key=A
 action_open_about_box.name=About
 
+action_open_invitation_received_wizard.description=Open invitation received wizard
+action_open_invitation_received_wizard.key=I
+action_open_invitation_received_wizard.name=Invitation
+
 action_open_chat.description=Open a chat session with this computer
 action_open_chat.key=C
 action_open_chat.name=Chat
