#278 - Add friend notification handling

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -649,9 +649,10 @@ home_tab.files_downloaded=File(s) downloaded
 home_tab.files_uploaded=File(s) uploaded
 home_tab.folders=Folder(s)
 home_tab.in_sync=All folders are synchronized.
+home_tab.new_computers=New computer(s)
 home_tab.new_invitations=New invitation(s)
 home_tab.no_computers=No other computers known
-home_tab.no_folders=No folder setup
+home_tab.no_folders=No folders setup
 home_tab.online_storage.account=Account: {0}
 home_tab.online_storage.account_connecting=Account: {0} connecting...
 home_tab.online_storage.account_disabled=Account: {0} disabled
