#278 - Ask for friendship action implementation.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -29,6 +29,10 @@ action_add_friend.description=Add computer to friend list
 action_add_friend.key=F
 action_add_friend.name=Add
 
+action_ask_for_friendship.description=Ask for friendship
+action_ask_for_friendship.key=A
+action_ask_for_friendship.name=Ask
+
 action_edit_transfer_mode.description=Edit this transfer mode
 action_edit_transfer_mode.key=E
 action_edit_transfer_mode.name=Edit
@@ -312,12 +316,13 @@ delete_confimation.busy.title=Deleting file(s)
 delete_confimation.text_move_to_recycle_bin_DIR=<DIR>
 delete_confimation.title=Delete files?
 
-dialog.add_member_to_friend_list.button.add=Add To Friends
-dialog.add_member_to_friend_list.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
-dialog.add_member_to_friend_list.messageTitle=Message from {0}
-dialog.add_member_to_friend_list.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
-dialog.add_member_to_friend_list.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
-dialog.add_member_to_friend_list.title=Add {0} to friend list
+dialog.ask_for_friendship.button.add=Add to friends
+dialog.ask_for_friendship.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
+dialog.ask_for_friendship.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
+dialog.ask_for_friendship.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
+dialog.ask_for_friendship.message_title=Message from {0}
+dialog.ask_for_friendship.title=Add {0} to friend list
+
 dialog.already_running.exit_button=Exit
 dialog.already_running.start_button=Start anyways
 dialog.already_running.title=Already running
@@ -489,10 +494,7 @@ folder.check_path_length.text=The combined length of the path to the file and th
 folder.check_path_length.title=Path maybe to long
 folder.info_tip=Contains files and folders managed by PowerFolder
 
-folder_create.dialog.backup_by_online_storage=Backup by Online Storage
 folder_create.dialog.backup_error.text=Unable to setup the Online Storage to backup the PowerFolder
-folder_create.dialog.create_desktop_shortcut=Create desktop shortcut
-folder_create.dialog.maual_sync=Synchronize folder manually
 folder_create.dialog.select_file.text=Select file
 folder_create.progress.text=Creating PowerFolder '{0}'
 
@@ -673,9 +675,6 @@ invitation.utils.unable.write.text=Error while writing invitation, please try ag
 invitation.utils.unable.write.title=Unable to write invitation
 invitation_files.description=PowerFolder invitations
 
-invite_received_handler.notify.message=You have received a PowerFolder invitation from {0}.
-invite_received_handler.notify.title=Invitation Received
-
 limited_connection.dont_autodetect=No longer detect limited connectivity
 limited_connection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
 limited_connection.title=Limited connectivity
@@ -819,17 +818,9 @@ preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior=Exit behavior
 preferences.dialog.general.title=General
 preferences.dialog.ip_lan_list=LAN IP List
-preferences.dialog.lan_line_settings=LAN speed
 preferences.dialog.language=Language
 preferences.dialog.line_settings=Internet speed
 preferences.dialog.network.title=Network
-preferences.dialog.network_mode.lan_only.tool_tip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
-preferences.dialog.network_mode.lan_only=LAN only
-preferences.dialog.network_mode.name=Connect to
-preferences.dialog.network_mode.private.tool_tip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
-preferences.dialog.network_mode.private=LAN and Internet
-preferences.dialog.network_mode.server_only.tool_tip=Restricts connections to the server only. This actually disables any peer-to-peer traffic and keeps the connection to the set Online Storage server only.
-preferences.dialog.network_mode.server_only=Server only
 preferences.dialog.nickname=Nickname
 preferences.dialog.non_windows_info=Note\: Some settings are only available on Windows systems
 preferences.dialog.open_port.tooltip=Opens the PowerFolder port on the Windows Firewall
@@ -852,8 +843,6 @@ preferences.dialog.show_chat_notifications=Show chat notifications when minimize
 preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
 preferences.dialog.show_preview_panel=Enable internal image preview
 preferences.dialog.show_system_notifications=Show system notifications when minimized
-preferences.dialog.silent_throttle.tool_tip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
-preferences.dialog.silent_throttle=Silent mode bandwidth throttle
 preferences.dialog.startPanel.downloads=Downloads
 preferences.dialog.startPanel.myFolders=My PowerFolders
 preferences.dialog.startPanel.overview=Overview
@@ -1025,11 +1014,6 @@ wizard.basic_setup.private=LAN and Internet
 wizard.basic_setup.title=Basic Setup
 wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 wizard.basic_setup.upload.title=Unlimited connection speed
-wizard.choose_disk_location.calculating_directory_size=Calculating size of directory...
-wizard.choose_disk_location.directory_no_write=WARNING: This directory cannot be written to
-wizard.choose_disk_location.directory_non_existent=WARNING: This directory does not exist
-wizard.choose_disk_location.directory_size=Directory size {0}
-wizard.choose_disk_location.select=Select directory
 wizard.choose_location.select=Please select the directory
 wizard.control.back.description=Go to previous wizard step
 wizard.control.back=Back
@@ -1072,7 +1056,6 @@ wizard.send_invitations.send_invitation=Send invitation
 wizard.send_invitations.send_success=Invitation sent
 wizard.send_invitations.send_success_info=You successfully sent the invitation.
 wizard.send_invitations.title=Save invitation
-wizard.setup_folder.send_invitation=Send invitations afterwards
 wizard.setup_folder.title=Create Folder
 wizard.setup_folder.transfer_mode=Transfer mode
 wizard.setup_success=Setup successfully
