#278 - Rename home tab line.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -651,7 +651,7 @@ home_tab.files_downloaded=File(s) downloaded
 home_tab.files_uploaded=File(s) uploaded
 home_tab.folders=Folder(s)
 home_tab.in_sync=All folders are synchronized.
-home_tab.new_computers=New computer(s)
+home_tab.new_friend_requests=New friend request(s)
 home_tab.new_invitations=New invitation(s)
 home_tab.no_computers=No other computers known
 home_tab.no_folders=No folders setup
