--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -291,16 +291,24 @@ chat_panel.member_left_folder_at_time={0} left folder {1} at {2}
 chat_panel.cannot_deliver=Message can not be delivered because '{0}' is not connected
 chat_panel.close_button.tool_tip=Close chat session with {0}
 
-choose_disk_location_panel.dir.title=Target directory
-choose_disk_location_panel.dir_no_exist.text=The specified target directory {0} does not exist.\nWould you like to locate this folder in the following directory?\n{1}
-choose_disk_location_panel.dir_no_write.text=The specified target directory {0} is not writable.\nWould you like to locate this folder in the following directory?\n{1}
+choose_disk_location_panel.select=Please select the directory
+choose_disk_location_panel.select_file=Select file
+choose_disk_location_panel.calculating_directory_size=Calculating size of directory...
+choose_disk_location_panel.directory_non_existent=WARNING\: This directory does not exist
+choose_disk_location_panel.directory_no_write=WARNING\: This directory cannot be written to
+choose_disk_location_panel.directory_size=Directory size {0}
+choose_disk_location_panel.backup_by_online_storage=Backup by Online Storage
+choose_disk_location_panel.create_desktop_shortcut=Create desktop shortcut
+choose_disk_location_panel.maual_sync=Manual synchronization
+choose_disk_location_panel.send_invitation=Send invitation
+choose_disk_location_panel.target_dir=Target directory
 
 computers_tab.computer_type_list.text=Select computer types to display
 computers_tab.all_friends_online_lan=All friends / online LAN
 computers_tab.online_friends=Online friends
 computers_tab.online_friends_online_lan=Online friends / online LAN
 
-connect.dialog.text=Please enter the hostname or ip of the computer you want to connect.\n\nPowerFolder automatically connects to the network after a short time;\nuse this option if you want to manually connect to a computer.\n
+connect.dialog.text=Please enter the hostname or IP of the computer you want to connect.\n\nPowerFolder automatically connects to the network after a short time;\nuse this option if you want to manually connect to a computer.\n
 connect.dialog.title=Manually connect to a PowerFolder computer
 
 date_format.detailed_time=[HH\:mm\:ss\:SSS]
@@ -1013,7 +1021,6 @@ wizard.basic_setup.private=LAN and Internet
 wizard.basic_setup.title=Basic Setup
 wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 wizard.basic_setup.upload.title=Unlimited connection speed
-wizard.choose_location.select=Please select the directory
 wizard.control.back.description=Go to previous wizard step
 wizard.control.back=Back
 wizard.control.cancel.description=Cancel this wizard
