Fixed too long text problem

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -345,7 +345,7 @@ dialog.create_edit_profile.auto_download_from_friends=Autodownload from friends
 dialog.create_edit_profile.auto_download_from_other=Autodownload from others
 dialog.create_edit_profile.cannot_save_name=This transfer mode cannot be saved because\nthere is already a transfer mode named {0}
 dialog.create_edit_profile.cannot_save_profile=This transfer mode cannot be saved because\nit is identical to transfer mode {0}
-dialog.create_edit_profile.change_detection_disabled=Change detection disabled
+dialog.create_edit_profile.change_detection_manual=Manual
 dialog.create_edit_profile.configure_from=Configure from an existing transfer mode
 dialog.create_edit_profile.daily_sync=Daily synchronization
 dialog.create_edit_profile.duplicate_profile_title=Duplicate transfer mode
