#278 - Add abort button to downloads panel

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -1,5 +1,6 @@
 # this file contains the images used in buttons
 
+action_abort_download.icon=icons/Abort.gif
 action_new_folder.icon=icons/Plus.png
 action_find_computers.icon=icons/FindComputers.gif
 action_open_preferences.icon=icons/Preferences.png
