--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -23,6 +23,10 @@
 # Actions #
 ###########
 
+action_abort_download.description=Abort selected download(s)
+action_abort_download.key=A
+action_abort_download.name=Abort
+
 action_add_friend.description=Add computer to friend list
 action_add_friend.key=F
 action_add_friend.name=Add
