#278 - Remove redundant Start Panel preference

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -830,8 +830,14 @@ preferences.dialog.exit_behavior=Exit behavior
 preferences.dialog.general.title=General
 preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.language=Language
+preferences.dialog.lanlinesettings=LAN speed
 preferences.dialog.line_settings=Internet speed
 preferences.dialog.network.title=Network
+preferences.dialog.network_mode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
+preferences.dialog.network_mode.lanonly=LAN only
+preferences.dialog.network_mode.name=Connect to
+preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
+preferences.dialog.network_mode.private=LAN and Internet
 preferences.dialog.nickname=Nickname
 preferences.dialog.non_windows_info=Note\: Some settings are only available on Windows systems
 preferences.dialog.open_port.tooltip=Opens the PowerFolder port on the Windows Firewall
@@ -854,9 +860,8 @@ preferences.dialog.show_chat_notifications=Show chat notifications when minimize
 preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
 preferences.dialog.show_preview_panel=Enable internal image preview
 preferences.dialog.show_system_notifications=Show system notifications when minimized
-preferences.dialog.startPanel.downloads=Downloads
-preferences.dialog.startPanel.myFolders=My PowerFolders
-preferences.dialog.startPanel.overview=Overview
+preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
+preferences.dialog.silent_throttle=Silentmode bandwidth throttle
 preferences.dialog.startPanel=Start panel
 preferences.dialog.start_with_windows=Start PowerFolder with Windows
 preferences.dialog.statusValidFailed=DynDns {0}\: validation failed\!
