#278 - Add Open Downloaded File button

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -24,5 +24,6 @@ action_details.icon=icons/Details.gif
 action_clear_completed_uploads.icon=icons/Clear.gif
 action_clear_completed_downloads.icon=icons/Clear.gif
 action_invite_friend.icon=icons/Invite.gif
+action_open_download.icon=icons/Open.gif
 
 
