--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -103,6 +103,10 @@ action_open_uploads_information.description=Show details of recent file uploads
 action_open_uploads_information.key=U
 action_open_uploads_information.name=Uploads
 
+action_open_download.description=Open downloaded file
+action_open_download.key=O
+action_open_download.name=Open
+
 action_new_folder.description=Create a new folder
 action_new_folder.key=N
 action_new_folder.name=New Folder
@@ -862,7 +866,6 @@ preferences.dialog.show_preview_panel=Enable internal image preview
 preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
 preferences.dialog.silent_throttle=Silentmode bandwidth throttle
-preferences.dialog.startPanel=Start panel
 preferences.dialog.start_with_windows=Start PowerFolder with Windows
 preferences.dialog.statusValidFailed=DynDns {0}\: validation failed\!
 preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is being validated\!
